fix: #2090 Support test of SNS Fifo topics
Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>