@@ -18,10 +18,11 @@ package io.github.microcks.minion.async.consumer;
 import io.github.microcks.domain.Secret;
 import io.github.microcks.minion.async.AsyncTestSpecification;
 
-import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.testcontainers.containers.Network;
 import org.testcontainers.containers.localstack.LocalStackContainer;
 import org.testcontainers.junit.jupiter.Container;
@@ -37,6 +38,7 @@ import software.amazon.awssdk.services.sns.model.PublishRequest;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -56,6 +58,7 @@ class AmazonSNSMessageConsumptionTaskIT {
 
    private static final Network NETWORK = Network.newNetwork();
    private static final String TOPIC_NAME = "test-topic";
+   private static final String FIFO_TOPIC_NAME = "test-topic.fifo";
    private static final String TEXT_MESSAGE_TEMPLATE = "{\"greeting\": \"Hello World!\", \"number\": %s}";
 
    @Container
@@ -63,11 +66,12 @@ class AmazonSNSMessageConsumptionTaskIT {
          DockerImageName.parse("localstack/localstack:4.14")).withNetwork(NETWORK).withNetworkAliases("localstack")
                .withServices(LocalStackContainer.Service.SNS, LocalStackContainer.Service.SQS);
 
-   private SnsClient snsClient;
-   private String topicArn;
+   private static SnsClient snsClient;
+   private static String topicArn;
+   private static String fifoTopicArn;
 
-   @BeforeEach
-   void beforeEach() {
+   @BeforeAll
+   static void beforeAll() {
       // Create an SNS client connected to LocalStack.
       snsClient = SnsClient.builder().endpointOverride(localStackContainer.getEndpoint())
             .region(Region.of(localStackContainer.getRegion()))
@@ -77,20 +81,23 @@ class AmazonSNSMessageConsumptionTaskIT {
 
       // Create the SNS topic.
       topicArn = snsClient.createTopic(CreateTopicRequest.builder().name(TOPIC_NAME).build()).topicArn();
+      fifoTopicArn = snsClient.createTopic(CreateTopicRequest.builder().name(FIFO_TOPIC_NAME)
+            .attributes(Map.of("FifoTopic", "true", "ContentBasedDeduplication", "true")).build()).topicArn();
    }
 
-   @AfterEach
-   void afterEach() {
+   @AfterAll
+   static void afterAll() {
       if (snsClient != null) {
          snsClient.close();
       }
    }
 
-   @Test
-   void shouldReceiveMessageOnTopicCorrectly() throws Exception {
+   @ParameterizedTest
+   @ValueSource(strings = { TOPIC_NAME, FIFO_TOPIC_NAME })
+   void shouldReceiveMessageOnTopicCorrectly(String topicName) throws Exception {
       // Arrange.
       AsyncTestSpecification asyncTestSpecification = new AsyncTestSpecification();
-      asyncTestSpecification.setTimeoutMS(4000L);
+      asyncTestSpecification.setTimeoutMS(3000L);
       asyncTestSpecification.setTestResultId("sns-test-result-id");
 
       Secret secret = new Secret();
@@ -98,7 +105,7 @@ class AmazonSNSMessageConsumptionTaskIT {
       secret.setPassword(localStackContainer.getSecretKey());
       asyncTestSpecification.setSecret(secret);
 
-      String endpointUrl = "sns://" + localStackContainer.getRegion() + "/" + TOPIC_NAME + "?overrideUrl="
+      String endpointUrl = "sns://" + localStackContainer.getRegion() + "/" + topicName + "?overrideUrl="
             + localStackContainer.getEndpoint();
       asyncTestSpecification.setEndpointUrl(endpointUrl);
 
@@ -112,8 +119,8 @@ class AmazonSNSMessageConsumptionTaskIT {
                   @Override
                   public List<ConsumedMessage> call() throws Exception {
                      // Wait a bit so that consumption task has actually started.
-                     await().during(1500, TimeUnit.MILLISECONDS).until(() -> true);
-                     sendTextMessagesOnTopic(1);
+                     await().during(1000, TimeUnit.MILLISECONDS).until(() -> true);
+                     sendTextMessagesOnTopic(1, topicName);
                      return Collections.emptyList();
                   }
                }, snsConsumptionTask), asyncTestSpecification.getTimeoutMS() + 1000L, TimeUnit.MILLISECONDS);
@@ -124,16 +131,23 @@ class AmazonSNSMessageConsumptionTaskIT {
       // Assert.
       Assertions.assertFalse(messages.isEmpty());
       Assertions.assertEquals(1, messages.size());
-      ConsumedMessage message = messages.get(0);
+      ConsumedMessage message = messages.getFirst();
       Assertions.assertEquals(TEXT_MESSAGE_TEMPLATE.formatted(0),
             new String(message.getPayload(), StandardCharsets.UTF_8));
    }
 
-   private void sendTextMessagesOnTopic(int numberOfMessages) {
+   private void sendTextMessagesOnTopic(int numberOfMessages, String topicName) {
+      // Find correct SNS topic to use.
+      boolean isFifo = topicName.endsWith(".fifo");
+      String arn = isFifo ? fifoTopicArn : topicArn;
+
       for (int i = 0; i < numberOfMessages; i++) {
-         PublishRequest publishRequest = PublishRequest.builder().topicArn(topicArn)
-               .message(TEXT_MESSAGE_TEMPLATE.formatted(i)).build();
-         snsClient.publish(publishRequest);
+         PublishRequest.Builder publishRequestBuilder = PublishRequest.builder().topicArn(arn)
+               .message(TEXT_MESSAGE_TEMPLATE.formatted(i));
+         if (isFifo) {
+            publishRequestBuilder.messageGroupId("test-group");
+         }
+         snsClient.publish(publishRequestBuilder.build());
          await().pollDelay(250, TimeUnit.MILLISECONDS).untilAsserted(() -> assertTrue(true));
       }
    }
